force-app/main/default/objects/Case/fields/CallerName__c.field-meta.xml
<CustomField>
    <fullName>CallerName__c</fullName>
    <label>入電者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>