force-app/main/default/objects/Case/fields/IsLinked__c.field-meta.xml
<CustomField>
    <fullName>IsLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>連携済みフラグ</label>
    <type>Checkbox</type>
</CustomField>