force-app/main/default/objects/Case/fields/RelinkingFlg__c.field-meta.xml
<CustomField>
    <fullName>RelinkingFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再連携フラグ</label>
    <type>Checkbox</type>
</CustomField>