force-app/main/default/objects/Case/fields/ScenarioType__c.field-meta.xml
<CustomField>
    <fullName>ScenarioType__c</fullName>
    <label>BEDOREシナリオタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>