force-app/main/default/objects/Case/listViews/AllCases.listView-meta.xml
<ListView>
    <fullName>AllCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>DialogueResult__c</columns>
    <columns>IsLinked__c</columns>
    <columns>RelinkingFlg__c</columns>
    <columns>ScenarioType__c</columns>
    <columns>SessionID__c</columns>
    <columns>VoiceLogURL__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのケース</label>
</ListView>