force-app/main/default/objects/Case/listViews/LinkedOver30Days_Case.listView-meta.xml
<ListView>
    <fullName>LinkedOver30Days_Case</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>DialogueResult__c</columns>
    <columns>IsLinked__c</columns>
    <columns>RelinkingFlg__c</columns>
    <columns>ScenarioType__c</columns>
    <columns>SessionID__c</columns>
    <columns>VoiceLogURL__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsDelete__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsLinked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>DialogueResult__c</field>
        <operation>equals</operation>
        <value>離脱</value>
    </filters>
    <label>削除対象受付ログ</label>
</ListView>