force-app/main/default/objects/Case/listViews/NotLinked_Case.listView-meta.xml
<ListView>
    <fullName>NotLinked_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>DialogueResult__c</columns>
    <columns>IsLinked__c</columns>
    <columns>RelinkingFlg__c</columns>
    <columns>ScenarioType__c</columns>
    <columns>SessionID__c</columns>
    <columns>VoiceLogURL__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsLinked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DialogueResult__c</field>
        <operation>equals</operation>
        <value>対話完結</value>
    </filters>
    <label>未連携受付ログ</label>
</ListView>